[build-system]
requires = ["setuptools>=65", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "fastmllp"
version = "0.1.1"
description = "Fast HL7 MLLP client/server"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [{name = "fastmllp contributors"}]
dependencies = [
  "tomli>=2.0.1; python_version < '3.11'",
]

[project.optional-dependencies]
dev = [
  "pytest>=7.4",
  "ruff>=0.1.9",
]

[project.scripts]
fastmllp = "fastmllp.cli:main"

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]

[tool.ruff.lint.isort]
known-first-party = ["fastmllp"]
